<?xml version="1.0"?>
<package format="2">
  <name>routing_rosrouting</name>
  <version>0.1.0</version>
  <description>The lane_change_planner package</description>

  <maintainer email="mitsudome-r@todo.todo">mitsudome-r</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
    <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_validation</depend>

  <depend>visualization_msgs</depend>

</package>
